# bevy_jam_2

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/models/enemies/: Alien.glb  Alien_Tall.glb  Bat.glb  Bee.glb  Cactus.glb  Chicken.glb  Crab.glb  Cthulhu.glb  Cyclops.glb  Deer.glb  Demon.glb  Ghost.glb  GreenDemon.glb  Mushroom.glb  Panda.glb  Penguin.glb  Pig.glb  Skull.glb  Tree.glb  YellowDragon.glb  Yeti.glb
assets/scenes/battles/: checkered-plane.glb  super_basic.glb
src/: animation.rs  battle.rs  board.rs  cards.rs  lib.rs  main.rs  main_state.rs  particles.rs  player.rs  prefab.rs  transitions.rs  tween_untils.rs  ui.rs  utils.rs  wasm.rs
wasm/: index.html
