[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.8", features = ["dynamic"] }
fastrand = "1"
bevy_tweening = "0.5"
iyes_loopless = "0.7"
strum_macros = "0.24"
strum = "0.24"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
