[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.8" }
fastrand = "1"
bevy_tweening = { version = "0.5", features = ["bevy_asset"] }
iyes_loopless = "0.7"
strum_macros = "0.24"
strum = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# patch wgpu to fix bug causing flickering on macOS chrome
# track: https://github.com/bevyengine/bevy/issues/5426#issuecomment-1227275839
[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
